<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudNote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="timetable">Timetable</string>
    <string name="agenda">Agenda</string>
    <string name="courses">Courses</string>
    <string name="marks">Marks</string>
    <string name="settings">Settings</string>
    <string name="label_courses">Add your courses here!</string>
    <string name="label_timetable">Add your events here!</string>
    <string name="lbl_courses">Courses:</string>
    <string name="lbl_days">Days:</string>
    <string name="lbl_teacher">Teacher:</string>
    <string name="lbl_when">When:</string>
    <string name="lbl_where">Where:</string>
    <string name="lbl_grading">Grading:</string>
    <string name="lbl_other">Other:</string>
    <string name="lbl_add">Add</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_change">Change hour</string>
    <string name="lbl_about">We are students in the 4th year of Bachelor Degree at the Polytechnic University of Bucharest. Each day we struggle with completing our tasks with efficiency and make our time count. So we came up with this app in order to better organize our schedule, to have a clearer view upon our everyday tasks.</string>
    <string name="lbl_names">Authors: \n Ana Greculescu \n Oana Hotescu \n Andreea Radu \n Lavinia Stoian \n Mirela Urse</string>
    <string name="lbl_about_us">About us</string>
    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>



</resources>
