<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/ic_background_home"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/menu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="347dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="bottom"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/timetable"
            android:id="@+id/buttonTimetable"
            android:width="150dp"
            android:background="#c0505e"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_horizontal"
            android:height="20dp"
            android:shadowColor="#c0505e"
            android:textStyle="normal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/agenda"
            android:id="@+id/buttonAgenda"
            android:layout_gravity="center_horizontal"
            android:width="150dp"
            android:background="#c0505e"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_margin="5dp"
            android:height="20dp"
            android:shadowColor="#c0505e" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/courses"
            android:id="@+id/buttonCourses"
            android:layout_gravity="center_horizontal"
            android:width="150dp"
            android:background="#c0505e"
            android:layout_margin="5dp"
            android:height="20dp"
            android:shadowColor="#c0505e"
            android:textStyle="normal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/marks"
            android:id="@+id/buttonMarks"
            android:layout_gravity="center_horizontal"
            android:width="150dp"
            android:layout_margin="5dp"
            android:background="#c0505e"
            android:height="20dp"
            android:shadowColor="#c0505e"
            android:textStyle="normal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/settings"
            android:id="@+id/buttonSetings"
            android:layout_gravity="center_horizontal"
            android:width="150dp"
            android:background="#c0505e"
            android:layout_margin="5dp"
            android:height="20dp"
            android:shadowColor="#c0505e"
            android:singleLine="false"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>




