<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e6d6b4"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_gravity="top"
        android:gravity="top"
        android:id="@+id/courses_header_layout"
        android:background="#c0505e"
        android:weightSum="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/back_button"
            android:contentDescription="backButton"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
            android:background="#c0505e"
            android:focusableInTouchMode="false" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/timetable"
            android:id="@+id/label_timetable"
            android:textStyle="normal"
            android:textSize="25sp"
            android:textColor="#ffffffff"
            android:background="#c0505e"
            android:gravity="center_vertical"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            android:src="@drawable/plus5"
            android:background="#ffc0505e"
            android:layout_marginRight="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_vertical|right" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:id="@+id/new_event_layout"
        android:visibility="gone"
        android:weightSum="1"
        android:layout_gravity="top">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_add_event"
                android:layout_gravity="top|center_horizontal"
            android:textSize="12sp"
                android:text="@string/label_timetable"
            android:layout_marginTop="10dp" />

        <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="144dp"
                android:id="@+id/time_picker_timetable"
                android:amPmBackgroundColor="#ffc0505e"
                android:focusable="true"
                android:numbersSelectorColor="#ffc0505e"
                android:layout_gravity="center_horizontal"
                android:headerBackground="#ffc0505e"
                android:amPmTextColor="#ffc0505e"
            android:layout_margin="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal">

            <Spinner
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_days"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_hour"
                android:textSize="12sp"
                android:inputType="text"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_change"
                android:id="@+id/btn_change_hour"
                android:background="#d5be9f"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical|right"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_event"
                android:textSize="12sp"
                android:inputType="text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
            android:gravity="center_horizontal" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/lbl_add"
                android:id="@+id/btn_add"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:width="80dp"
                android:height="50dp"
                android:background="#d5be9f" />

    </LinearLayout>


    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expandable_timetable"
        android:headerDividersEnabled="true"
        android:transcriptMode="alwaysScroll" />


</LinearLayout>




